refactor(backend): deprecated URL 생성자 사용 부분 제거
- Java 20에서 deprecate 된 new URL(String, String, int, String) 생성자 대신 URI 객체 생성 후 toURL()을 호출하도록 수정
- 관련 빌드 warning(uses or overrides a deprecated API) 해소